force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Purchase_Date__c</fullName>
    <formula>TAD_Order__r.ordexp_purchase_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>DateTime</type>
</CustomField>