force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Sub_Option_Purchased__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Sub_Option_Purchased__c</fullName>
    <formula>TAD_Order__r.ordexp_Sub_Options_for_Stay__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Option Purchased</label>
    <type>Text</type>
</CustomField>