force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Total_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Total_Amount_Outstanding__c</fullName>
    <formula>IF(CONTAINS(TEXT(TAD_Order__r.ordexp_amount_outstanding__c), &quot;.&quot;),
LEFT(TEXT(TAD_Order__r.ordexp_amount_outstanding__c), FIND(&quot;.&quot;, TEXT(TAD_Order__r.ordexp_amount_outstanding__c)) -1) &amp;
&quot;.&quot; &amp;
RPAD(MID(TEXT(ROUND(TAD_Order__r.ordexp_amount_outstanding__c, 2)),
FIND(&quot;.&quot;, TEXT(TAD_Order__r.ordexp_amount_outstanding__c))+1,
2),
2,
&quot;0&quot;),
TEXT(TAD_Order__r.ordexp_amount_outstanding__c) &amp; &quot;.00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Outstanding</label>
    <type>Text</type>
</CustomField>