force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Total_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Total_Payment_Received__c</fullName>
    <formula>TAD_Order__r.ordexp_total_payment_received__c</formula>
    <label>Total Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>