force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_Travefy_Share_URL__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Travefy_Share_URL__c</fullName>
    <formula>CASE( order_record_type_name__c ,
&quot;TAD&quot;, &quot;https://app.tripadeal.com.au/&quot; &amp; Share_URL_Path_From_Travefy_Document__c,
&quot;TNZ&quot;, &quot;https://documentation.tripadeal.co.nz/&quot; &amp; Share_URL_Path_From_Travefy_Document__c,
&quot;TC&quot; , &quot;https://tcdocumentation.tripadeal.travel/&quot; &amp; Share_URL_Path_From_Travefy_Document__c,
&quot;WT&quot;, &quot;https://documentation.tripadeal.co.nz/&quot; &amp; Share_URL_Path_From_Travefy_Document__c,
&quot;http://www.tripadeal.com.au/login&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travefy Share URL</label>
    <type>Text</type>
</CustomField>