force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_UserEmail_fromTADOrder__c.field-meta.xml
<CustomField>
    <fullName>ordexp_UserEmail_fromTADOrder__c</fullName>
    <formula>TAD_Order__r.user_email__c</formula>
    <label>UserEmail_fromTADOrder</label>
    <type>Text</type>
</CustomField>