force-app/main/default/objects/Order_Communication_POE__c/fields/ordexp_YearPC_fromTADOrder__c.field-meta.xml
<CustomField>
    <fullName>ordexp_YearPC_fromTADOrder__c</fullName>
    <formula>TAD_Order__r.Year_PC__c</formula>
    <label>YearPC_fromTADOrder</label>
    <type>Text</type>
</CustomField>