force-app/main/default/objects/Order_Communication_POE__c/fields/Package_Qty__c.field-meta.xml
<CustomField>
    <fullName>Package_Qty__c</fullName>
    <formula>TAD_Order__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>