force-app/main/default/objects/Order_Communication_POE__c/fields/Partner_Deal_Main_Image__c.field-meta.xml
<CustomField>
    <fullName>Partner_Deal_Main_Image__c</fullName>
    <label>Partner Deal Main Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>