force-app/main/default/objects/Order_Communication_POE__c/fields/Passengers_Affected__c.field-meta.xml
<CustomField>
    <fullName>Passengers_Affected__c</fullName>
    <description>For Tad Interrupted Tour</description>
    <label>Passengers Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>