force-app/main/default/objects/Order_Communication_POE__c/fields/Pax_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Pax_Impacted__c</fullName>
    <description>For Tad Interrupted Tour</description>
    <label>Pax Impacted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>