force-app/main/default/objects/Order_Communication_POE__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>