force-app/main/default/objects/Order_Communication_POE__c/fields/Payment_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Amount__c</fullName>
    <label>Payment Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>