force-app/main/default/objects/Order_Communication_POE__c/fields/Payment_Transaction_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Currency_Code__c</fullName>
    <label>Payment Transaction Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>