force-app/main/default/objects/Order_Communication_POE__c/fields/Payment_Transaction_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Method__c</fullName>
    <label>Payment Transaction Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>