force-app/main/default/objects/Order_Communication_POE__c/fields/PDF_Image__c.field-meta.xml
<CustomField>
    <fullName>PDF_Image__c</fullName>
    <formula>TAD_Order__r.ordexp_deal__r.PDF_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Image</label>
    <type>Text</type>
</CustomField>