force-app/main/default/objects/Order_Communication_POE__c/fields/PIF_List__c.field-meta.xml
<CustomField>
    <fullName>PIF_List__c</fullName>
    <label>PIF List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>