force-app/main/default/objects/Order_Communication_POE__c/fields/POLi_Resume__c.field-meta.xml
<CustomField>
    <fullName>POLi_Resume__c</fullName>
    <formula>&quot;tours.qantas.com/resume/&quot;&amp; TAD_Order__r.Name&amp;&quot;/&quot;&amp; TAD_Order__r.Full_SFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POLi Resume</label>
    <type>Text</type>
</CustomField>