force-app/main/default/objects/Order_Communication_POE__c/fields/Property_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Phone_Number__c</fullName>
    <label>Property Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>