force-app/main/default/objects/Order_Communication_POE__c/fields/Purchaser_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Date__c</fullName>
    <formula>DATEVALUE(ordexp_Purchase_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Date</label>
    <type>Date</type>
</CustomField>