force-app/main/default/objects/Order_Communication_POE__c/fields/Purchaser_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Email_Address__c</fullName>
    <label>Purchaser Email Address</label>
    <type>Email</type>
</CustomField>