force-app/main/default/objects/Order_Communication_POE__c/fields/purchaser_first_name__c.field-meta.xml
<CustomField>
    <fullName>purchaser_first_name__c</fullName>
    <label>Purchaser First Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>