force-app/main/default/objects/Order_Communication_POE__c/fields/purchaser_full_name__c.field-meta.xml
<CustomField>
    <fullName>purchaser_full_name__c</fullName>
    <label>Purchaser Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>