force-app/main/default/objects/Order_Communication_POE__c/fields/Purchaser_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Phone_Number__c</fullName>
    <formula>IF(
NOT(ISBLANK(TAD_Order__r.ordexp_account__r.PersonContact.MobilePhone)),
TAD_Order__r.ordexp_account__r.PersonContact.MobilePhone,
TAD_Order__r.ordexp_account__r.Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Phone Number</label>
    <type>Text</type>
</CustomField>