force-app/main/default/objects/Order_Communication_POE__c/fields/Quantity_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Confirmed__c</fullName>
    <formula>TAD_Order__r.Quantity_Confirmed__c</formula>
    <label>Quantity Confirmed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>