force-app/main/default/objects/Order_Communication_POE__c/fields/Quote_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_By__c</fullName>
    <formula>TAD_Order__r.CreatedBy.FirstName +&apos; &apos;+ TAD_Order__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Created By</label>
    <type>Text</type>
</CustomField>