force-app/main/default/objects/Order_Communication_POE__c/fields/Quote_Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_By_Email__c</fullName>
    <formula>TAD_Order__r.CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Created By Email</label>
    <type>Text</type>
</CustomField>