force-app/main/default/objects/Order_Communication_POE__c/fields/Quote_Details_For_Customer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Details_For_Customer__c</fullName>
    <label>Quote Details For Customer</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>