force-app/main/default/objects/Order_Communication_POE__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>For Tad Interrupted Tour</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>