force-app/main/default/objects/Order_Communication_POE__c/fields/return_date__c.field-meta.xml
<CustomField>
    <fullName>return_date__c</fullName>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>