force-app/main/default/objects/Order_Communication_POE__c/fields/RFT_coupon__c.field-meta.xml
<CustomField>
    <fullName>RFT_coupon__c</fullName>
    <formula>TAD_Order__r.Purchaser_Last_Name__c +   RIGHT( CASESAFEID( TAD_Order__c ) , 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFT coupon</label>
    <type>Text</type>
</CustomField>