force-app/main/default/objects/Order_Communication_POE__c/fields/Send_booking_instruction_to_PC__c.field-meta.xml
<CustomField>
    <fullName>Send_booking_instruction_to_PC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field dictates extra info for purchase coms</description>
    <inlineHelpText>This field dictates extra info for purchase coms</inlineHelpText>
    <label>Send booking instruction to PC</label>
    <type>Checkbox</type>
</CustomField>