force-app/main/default/objects/Order_Communication_POE__c/fields/Share_URL_Path_From_Travefy_Document__c.field-meta.xml
<CustomField>
    <fullName>Share_URL_Path_From_Travefy_Document__c</fullName>
    <label>Share URL Path From Travefy Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>