force-app/main/default/objects/Order_Communication_POE__c/fields/Special_Check_In_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Check_In_Instructions__c</fullName>
    <label>Special Check In Instructions</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>