force-app/main/default/objects/Order_Communication_POE__c/fields/Stay_Booking_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Stay_Booking_Instructions__c</fullName>
    <label>Stay Booking Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>