force-app/main/default/objects/Order_Communication_POE__c/fields/Stay_Booking_Instructions_Rich__c.field-meta.xml
<CustomField>
    <fullName>Stay_Booking_Instructions_Rich__c</fullName>
    <label>Stay Booking Instructions Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>