force-app/main/default/objects/Order_Communication_POE__c/fields/Stay_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Stay_Property_Name__c</fullName>
    <formula>TAD_Order__r.StayPropertyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stay Property Name</label>
    <type>Text</type>
</CustomField>