force-app/main/default/objects/Order_Communication_POE__c/fields/stayvalidfrom__c.field-meta.xml
<CustomField>
    <fullName>stayvalidfrom__c</fullName>
    <formula>TAD_Order__r.Stayvalidfrom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>stayvalidfrom</label>
    <type>Date</type>
</CustomField>