force-app/main/default/objects/Order_Communication_POE__c/fields/stayvalidto__c.field-meta.xml
<CustomField>
    <fullName>stayvalidto__c</fullName>
    <formula>TAD_Order__r.stayvalidto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>stayvalidto</label>
    <type>Date</type>
</CustomField>