force-app/main/default/objects/Order_Communication_POE__c/fields/stop_comms_via_order_date_deal__c.field-meta.xml
<CustomField>
    <fullName>stop_comms_via_order_date_deal__c</fullName>
    <formula>TAD_Order__r.ordexp_Stop_Comms_via_Order_Date_Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stop Comms via Order/Date/Deal</label>
    <type>Checkbox</type>
</CustomField>