force-app/main/default/objects/Order_Communication_POE__c/fields/Sub_Option_text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Option_text__c</fullName>
    <label>Sub Option text</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>