force-app/main/default/objects/Order_Communication_POE__c/fields/Survey_Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_Coupon_ID__c</fullName>
    <formula>MID( Id ,10,6) +IF(CONTAINS(TAD_Order__r.ordexp_account__r.LastName,&quot; &quot;), SUBSTITUTE(TAD_Order__r.ordexp_account__r.LastName,&quot; &quot;,&quot;&quot;), TAD_Order__r.ordexp_account__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Coupon ID</label>
    <type>Text</type>
</CustomField>