force-app/main/default/objects/Order_Communication_POE__c/fields/Survey_Results__c.field-meta.xml
<CustomField>
    <fullName>Survey_Results__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Results</label>
    <referenceTo>Survey_Results__c</referenceTo>
    <relationshipLabel>Order Communications</relationshipLabel>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>