force-app/main/default/objects/Order_Communication_POE__c/fields/survey_sent__c.field-meta.xml
<CustomField>
    <fullName>survey_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Survey Sent</label>
    <type>Checkbox</type>
</CustomField>