force-app/main/default/objects/Order_Communication_POE__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <label>Feefo URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>