force-app/main/default/objects/Order_Communication_POE__c/fields/TAD_Coupon_Name__c.field-meta.xml
<CustomField>
    <fullName>TAD_Coupon_Name__c</fullName>
    <formula>TAD_Order__r.Tad_Coupon_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Coupon Name</label>
    <type>Text</type>
</CustomField>