force-app/main/default/objects/Order_Communication_POE__c/fields/Tad_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tad_Order_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tad order owner lookup</description>
    <label>Tad Order Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>