force-app/main/default/objects/Order_Communication_POE__c/fields/Tad_Order_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Tad_Order_Owner_Email__c</fullName>
    <label>Tad Order Owner Email</label>
    <type>Email</type>
</CustomField>