force-app/main/default/objects/Order_Communication_POE__c/fields/Tax_Fees__c.field-meta.xml
<CustomField>
    <fullName>Tax_Fees__c</fullName>
    <label>Tax Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>