force-app/main/default/objects/Order_Communication_POE__c/fields/TC_agent_email__c.field-meta.xml
<CustomField>
    <fullName>TC_agent_email__c</fullName>
    <label>TC agent email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>