force-app/main/default/objects/Order_Communication_POE__c/fields/Total_Amount_Including_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Including_Coupon__c</fullName>
    <formula>ordexp_Total_Payment_Received__c +  bh_Coupon_Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Including Coupon) )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>