force-app/main/default/objects/Order_Communication_POE__c/fields/Total_Amount_Refund__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Refund__c</fullName>
    <formula>Cancellation_amount__c + Booking_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>