force-app/main/default/objects/Order_Communication_POE__c/fields/Total_Claimable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claimable_Amount__c</fullName>
    <label>Total Claimable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>