force-app/main/default/objects/Order_Communication_POE__c/fields/Total_Refund__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund__c</fullName>
    <label>Total Refund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>