force-app/main/default/objects/Order_Communication_POE__c/fields/Total_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Surcharge__c</fullName>
    <formula>Merchant_Surcharge__c + Booking_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>