force-app/main/default/objects/Order_Communication_POE__c/fields/Travefy_Itinerary_Url__c.field-meta.xml
<CustomField>
    <fullName>Travefy_Itinerary_Url__c</fullName>
    <formula>TAD_Order__r.Travefy_Itinerary_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travefy Itinerary Url</label>
    <type>Text</type>
</CustomField>