force-app/main/default/objects/Order_Communication_POE__c/fields/Welcome_home_sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_home_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome home sent</label>
    <type>Checkbox</type>
</CustomField>