force-app/main/default/objects/Order_Communication_POE__c/fields/WL_Deal__c.field-meta.xml
<CustomField>
    <fullName>WL_Deal__c</fullName>
    <formula>IF(ISPICKVAL(TAD_Order__r.ordexp_deal__r.WL_Status__c,&quot;Published&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WL Deal</label>
    <type>Checkbox</type>
</CustomField>