force-app/main/default/objects/Order_Communication_POE__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>communication_code__c</columns>
    <columns>TAD_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>communication_code__c</field>
        <operation>equals</operation>
        <value>TAD PIF Chase Offload</value>
    </filters>
    <label>All</label>
</ListView>