force-app/main/default/objects/Order_Communication_POE__c/listViews/NPS_View.listView-meta.xml
<ListView>
    <fullName>NPS_View</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>communication_code__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Survey_Results__c</columns>
    <columns>Survey_Coupon_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>communication_code__c</field>
        <operation>equals</operation>
        <value>Return from trip</value>
    </filters>
    <filters>
        <field>coupon__c</field>
        <operation>equals</operation>
    </filters>
    <label>Return from trip</label>
</ListView>