force-app/main/default/objects/Order_Communication_POE__c/listViews/Order_Comms_Review_RFT1.listView-meta.xml
<ListView>
    <fullName>Order_Comms_Review_RFT1</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TAD_Order__c</columns>
    <columns>ordexp_DealFC_fromTADOrder__c</columns>
    <columns>communication_code__c</columns>
    <columns>email_purchaser__c</columns>
    <columns>Survey_URL__c</columns>
    <columns>Fire_Feefo_today__c</columns>
    <columns>survey_sent__c</columns>
    <columns>purchaser_full_name__c</columns>
    <columns>Deal__c</columns>
    <columns>Welcome_home_date__c</columns>
    <columns>Welcome_home_sent__c</columns>
    <columns>return_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>communication_code__c</field>
        <operation>contains</operation>
        <value>Return from trip</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/3/2023 12:00 AM</value>
    </filters>
    <label>Order Comms Review - RFT</label>
</ListView>