force-app/main/default/objects/Order_Communication_POE__c/listViews/Return_from_trip_survey_returned.listView-meta.xml
<ListView>
    <fullName>Return_from_trip_survey_returned</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>communication_code__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Survey_Results__c</columns>
    <columns>Survey_Coupon_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>communication_code__c</field>
        <operation>equals</operation>
        <value>Return from trip campaign - survey completed</value>
    </filters>
    <label>Return from trip - survey returned</label>
</ListView>