force-app/main/default/objects/Order_Communication_POE__c/listViews/Send_Survey_Today.listView-meta.xml
<ListView>
    <fullName>Send_Survey_Today</fullName>
    <columns>NAME</columns>
    <columns>email_purchaser__c</columns>
    <columns>Fire_Feefo_today__c</columns>
    <columns>survey_sent__c</columns>
    <columns>Deal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Refresh__c</columns>
    <columns>Welcome_home_sent__c</columns>
    <columns>Welcome_home_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fire_Feefo_today__c</field>
        <operation>equals</operation>
        <value>yes</value>
    </filters>
    <label>Send Survey Today</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>